--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages.</p>
     <p>Made By CedricVH</p>
-    <div></div>
+    <div class="flex-containter">
+        <div>
+            <img src="images/image-qr-code.png" width="200" height="200"><h1>Improve your front-end skills by building projects</h1>
+        </div>
+        <div>
+            
+        </div>
+        <div>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</div>
+    </div>
 </body>
 
 </html>
